# NoomyPlan

./: BudgetPage.cpp  BudgetPage.h  CMakeLists.txt  Expenses.cpp  Expenses.h  NoomyPlan  README.txt  added commentss  authenticatesystem.cpp  authenticatesystem.h  balance_sheet_report.csv  budgetpage.cpp  budgetpage.h  budgetpagebudget.cpp  budgetpagebudget.h  budgetpageexpenses.cpp  budgetpageexpenses.h  cashflowreport.csv  cashflowtracking.cpp  cashflowtracking.h  cmakelists.txt  dashboard.cpp  dashboard.h  expense_breakdown_report.csv  expenses.cpp  expenses.h  financialreport.cpp  financialreport.h  inventory.cpp  inventory.h  loginpage.cpp  loginpage.h  main.cpp  mainwindow.h  moc_budgetpage.cpp  noomyplan.pro  user.cpp  user.h  users.txt
